# dias-dict

./: README.md  pyproject.toml
discord_dict/: api_response.py  app.py  client.py  dict_request.py
tests/: test_discord_dict.py
